--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
 	<meta name="language" content="en">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     	<!-- blueprint CSS framework -->
-	<link href="/images/icon.ico" rel="shortcut icon">
-    <link rel="stylesheet" type="text/css" href="/css/fontawesome/css/font-awesome.min.css" />
-	<link rel="stylesheet" type="text/css" href="/js/home/plugin/vendor/bootstrap/css/bootstrap.min.css" />
+	<link href="images/icon.ico" rel="shortcut icon">
+    <link rel="stylesheet" type="text/css" href="css/fontawesome/css/font-awesome.min.css" />
+	<link rel="stylesheet" type="text/css" href="js/home/plugin/vendor/bootstrap/css/bootstrap.min.css" />
 
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/js/home/plugin/css/grayscale.min.css"/>
-    <link rel="stylesheet" type="text/css" href="/css/home.css" />
+    <link rel="stylesheet" type="text/css" href="js/home/plugin/css/grayscale.min.css"/>
+    <link rel="stylesheet" type="text/css" href="css/home.css" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109243227-1"></script>
