--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="/images/home/games/pes2019.jpg">
+                    <img src="images/home/games/pes2019.jpg">
                     <a class="btn btn-default col-xs-12" role="button">Pro Evolution Soccer 2019</a>
                     <div class="clearfix"></div>
                 </div>
@@ -165,7 +165,7 @@
 
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="/images/home/games/fifa2019.jpg">
+                    <img src="images/home/games/fifa2019.jpg">
                     <a class="btn btn-default col-xs-12" role="button">FIFA 2019</a>
                     <div class="clearfix"></div>
                 </div>
@@ -173,7 +173,7 @@
 
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="/images/home/games/spiderman.png">
+                    <img src="images/home/games/spiderman.png">
                     <a class="btn btn-default col-xs-12" role="button">Spider-man</a>
                     <div class="clearfix"></div>
                 </div>
@@ -181,105 +181,105 @@
 
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="/images/home/games/pes2018.jpg">
+                    <img src="images/home/games/pes2018.jpg">
                     <a class="btn btn-default col-xs-12" role="button">Pro Evolution Soccer 2018</a>
                     <div class="clearfix"></div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="/images/home/games/ps4fifa18.jpg">
+                    <img src="images/home/games/ps4fifa18.jpg">
                     <a class="btn btn-default col-xs-12" role="button">FIFA 2018</a>
                     <div class="clearfix"></div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="/images/home/games/god-of-war-4-day-one-edition.jpg">
+                    <img src="images/home/games/god-of-war-4-day-one-edition.jpg">
                     <a class="btn btn-default col-xs-12" role="button">God Of War 4</a>
                     <div class="clearfix"></div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="/images/home/games/Grand-Theft-Auto-V-PS4-Box-Art.jpg">
+                    <img src="images/home/games/Grand-Theft-Auto-V-PS4-Box-Art.jpg">
                     <a class="btn btn-default col-xs-12" role="button">Grand Theft Auto V</a>
                     <div class="clearfix"></div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="/images/home/games/capcom-2-1003801.jpg">
+                    <img src="images/home/games/capcom-2-1003801.jpg">
                     <a class="btn btn-default col-xs-12" role="button">Marvel vs. Capcom</a>
                     <div class="clearfix"></div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="/images/home/games/nsuns_legacy_ps4_3d_pegi_usk_1499157554.jpg">
+                    <img src="images/home/games/nsuns_legacy_ps4_3d_pegi_usk_1499157554.jpg">
                     <a class="btn btn-default col-xs-12" role="button">Naruto Ultimate Ninja Storm Legacy</a>
                     <div class="clearfix"></div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="/images/home/games/81HNE-+Y6WL._SL1500_.jpg">
+                    <img src="images/home/games/81HNE-+Y6WL._SL1500_.jpg">
                     <a class="btn btn-default col-xs-12" role="button">Tekken 7</a>
                     <div class="clearfix"></div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="/images/home/games/injustice.jpg">
+                    <img src="images/home/games/injustice.jpg">
                     <a class="btn btn-default col-xs-12" role="button">Injustice 2</a>
                     <div class="clearfix"></div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="/images/home/games/ps4-the-witcher-3-wild-hunt_1.jpg">
+                    <img src="images/home/games/ps4-the-witcher-3-wild-hunt_1.jpg">
                     <a class="btn btn-default col-xs-12" role="button">The Witcher 3</a>
                     <div class="clearfix"></div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="/images/home/games/81Oqvv6OxHL._SL1500_.jpg">
+                    <img src="images/home/games/81Oqvv6OxHL._SL1500_.jpg">
                     <a class="btn btn-default col-xs-12" role="button">Need For Speed Rivals</a>
                     <div class="clearfix"></div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="/images/home/games/91iH-qAxe7L._SL1500_.jpg">
+                    <img src="images/home/games/91iH-qAxe7L._SL1500_.jpg">
                     <a class="btn btn-default col-xs-12" role="button">WWE 2017</a>
                     <div class="clearfix"></div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="/images/home/games/Horizon-zero-dawn-box-art.jpg">
+                    <img src="images/home/games/Horizon-zero-dawn-box-art.jpg">
                     <a class="btn btn-default col-xs-12" role="button">Horizon Zero Dawn</a>
                     <div class="clearfix"></div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="/images/home/games/ufc_2_PS4_1_front_fvlb_3602794547772389271.jpg">
+                    <img src="images/home/games/ufc_2_PS4_1_front_fvlb_3602794547772389271.jpg">
                     <a class="btn btn-default col-xs-12" role="button">UFC 2</a>
                     <div class="clearfix"></div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="/images/home/games/C0R4myqWgAERMF2.jpg">
+                    <img src="images/home/games/C0R4myqWgAERMF2.jpg">
                     <a class="btn btn-default col-xs-12" role="button">Crash Bandicot N Sane Trilogy</a>
                     <div class="clearfix"></div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="/images/home/games/1390942.jpg">
+                    <img src="images/home/games/1390942.jpg">
                     <a class="btn btn-default col-xs-12" role="button">Battlefield 4</a>
                     <div class="clearfix"></div>
                 </div>
@@ -298,7 +298,7 @@
                 <div class="container text-left">
                     <div class="row">
                         <div class="col-md-8 kritiksaran">
-                            <form statusKritikSaran="0" id="kritiksaran-form" action="/home/kritiksaran" method="post">                                <div class="row">
+                            <form statusKritikSaran="0" id="kritiksaran-form" action="home/kritiksaran" method="post">                                <div class="row">
                                     <div class="col-md-12">
                                         <div class="form-group">
                                             <label for="name">Nama</label>
@@ -337,18 +337,18 @@
 </section>
 
 <!-- Map Section -->
-<div id="map" data-svg-path="/images/home/map-marker.svg"></div>
+<div id="map" data-svg-path="images/home/map-marker.svg"></div>
 	<div id="footer">
         <div class="overlay"></div>
-        <script type="text/javascript" src="/js/home/plugin/vendor/jquery/jquery.min.js"></script>
-        <script type="text/javascript" src="/js/home/plugin/vendor/popper/popper.min.js"></script>
-        <script type="text/javascript" src="/js/home/plugin/vendor/bootstrap/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="/js/home/plugin/vendor/jquery-easing/jquery.easing.min.js"></script>
+        <script type="text/javascript" src="js/home/plugin/vendor/jquery/jquery.min.js"></script>
+        <script type="text/javascript" src="js/home/plugin/vendor/popper/popper.min.js"></script>
+        <script type="text/javascript" src="js/home/plugin/vendor/bootstrap/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="js/home/plugin/vendor/jquery-easing/jquery.easing.min.js"></script>
 
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUC9orRtKzVWG06f6TJkzlMT2XbO4Mupw&sensor=false"></script>
 
-        <script type="text/javascript" src="/js/home/plugin/js/grayscale.js"></script>
-        <script type="text/javascript" src="/js/home/global_home.js"></script>
+        <script type="text/javascript" src="js/home/plugin/js/grayscale.js"></script>
+        <script type="text/javascript" src="js/home/global_home.js"></script>
 	</div><!-- footer -->
 </div><!-- container -->
 
