--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 
-	<title>Royal Rental Playstation - Home</title>
+	<title>Gunung Ringgit Rental Playstation - Home</title>
 </head>
 
 <body id="page-top">
@@ -27,7 +27,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Royal Rental</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Gunung Ringgit Rental</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
             <i class="fa fa-bars"></i>
@@ -38,7 +38,7 @@
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" href="#">Fasilitas <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a class="nav-link js-scroll-trigger" href="#playstation">Royal Playstation</a>
+                            <a class="nav-link js-scroll-trigger" href="#playstation">Gunung Ringgit Playstation</a>
                         </li>
                     </ul>
                 </li>
@@ -46,7 +46,7 @@
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" href="#">Games <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a class="nav-link js-scroll-trigger" href="#playstationgames">Royal Playstation</a>
+                            <a class="nav-link js-scroll-trigger" href="#playstationgames">Gunung Ringgit Playstation</a>
                         </li>
                     </ul>
                 </li>
@@ -79,7 +79,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-10 mx-auto">
-                <h2>Royal Rental Playstation <br>Lantai 1</h2>
+                <h2>Gunung Ringgit Rental Playstation <br>Lantai 1</h2>
                 <div class="row">
                     <div class="col-sm-4 col-md-4">
                         <div class="card">
@@ -118,7 +118,7 @@
                             <span class="fa fa-4x fa-wifi"></span>
                             <div class="card-body">
                                 <h4 class="card-title">free wifi</h4>
-                                <h5 class="card-title" style="text-transform: capitalize">Pass : Royalrentalps</h5>
+                                <h5 class="card-title" style="text-transform: capitalize">Pass : Gunung Ringgitrentalps</h5>
                             </div>
                         </div>
                     </div>
@@ -310,14 +310,14 @@
                         <div class="col-md-4">
                             <legend><span class="fa fa-globe"></span> Alamat Kami</legend>
                             <address>
-                                <strong>Royal Rental Playstation</strong><br>
-                                Ruko Royal Living RB no. 1<br>
+                                <strong>Gunung Ringgit Rental Playstation</strong><br>
+                                Ruko Gunung Ringgit Living RB no. 1<br>
                                 Jl. Gatot Subroto, Sepatan<br>
                                 Tangerang
                             </address>
                             <address>
                                 <strong><i class="fa fa-envelope"></i></strong>
-                                <a href="mailto:royalrentalps@gmail.com">royalrentalps@gmail.com</a>
+                                <a href="mailto:Gunung Ringgitrentalps@gmail.com">GunungRinggitrentalps@gmail.com</a>
                             </address>
                         </div>
                     </div>
