--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-10 mx-auto">
-                <h2>Gunung Ringgit Rental Playstation <br>Lantai 1</h2>
+                <h2>Gunung Ringgit Rental Playstation </h2>
                 <div class="row">
                     <div class="col-sm-4 col-md-4">
                         <div class="card">
@@ -99,9 +99,25 @@
                     </div>
                     <div class="col-sm-4 col-md-4">
                         <div class="card">
+                            <span class="fa fa-4x fa-gamepad"></span>
+                            <div class="card-body">
+                                <h4 class="card-title">Game PS 5 Terbaru</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 col-md-4">
+                        <div class="card">
                             <img class="card-img-top" src="images/home/Martz90-Circle-Addon2-Playstation.ico">
                             <div class="card-body">
                                 <h4 class="card-title">Terdapat 9 console PS 4</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 col-md-4">
+                        <div class="card">
+                            <img class="card-img-top" src="images/home/Martz90-Circle-Addon2-Playstation.ico">
+                            <div class="card-body">
+                                <h4 class="card-title">Terdapat 4 console PS 5</h4>
                             </div>
                         </div>
                     </div>
@@ -113,23 +129,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4 col-md-4">
-                        <div class="card">
-                            <span class="fa fa-4x fa-wifi"></span>
-                            <div class="card-body">
-                                <h4 class="card-title">free wifi</h4>
-                                <h5 class="card-title" style="text-transform: capitalize">Pass : Gunung Ringgitrentalps</h5>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4 col-md-4">
-                        <div class="card">
-                            <img class="card-img-top" src="images/home/Refrigeration-Icon.png">
-                            <div class="card-body">
-                                <h4 class="card-title">FULL AC</h4>
-                            </div>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </div>
@@ -310,10 +310,8 @@
                         <div class="col-md-4">
                             <legend><span class="fa fa-globe"></span> Alamat Kami</legend>
                             <address>
-                                <strong>Gunung Ringgit Rental Playstation</strong><br>
-                                Ruko Gunung Ringgit Living RB no. 1<br>
-                                Jl. Gatot Subroto, Sepatan<br>
-                                Tangerang
+                                <strong>RENTAL PS5 & PS4 GUNUNG RINGGIT </strong><br>
+                                Jl. P. Sanama No.5, Way Halim Permai
                             </address>
                             <address>
                                 <strong><i class="fa fa-envelope"></i></strong>
@@ -328,7 +326,7 @@
 </section>
 
 <!-- Map Section -->
-<div id="map" data-svg-path="images/home/map-marker.svg"></div>
+<div id="map" ></div>
 	<div id="footer">
         <div class="overlay"></div>
         <script type="text/javascript" src="js/home/plugin/vendor/jquery/jquery.min.js"></script>
@@ -336,8 +334,7 @@
         <script type="text/javascript" src="js/home/plugin/vendor/bootstrap/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/home/plugin/vendor/jquery-easing/jquery.easing.min.js"></script>
 
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUC9orRtKzVWG06f6TJkzlMT2XbO4Mupw&sensor=false"></script>
-
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3972.2028380897764!2d105.27276507575564!3d-5.386023653851938!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e40db171ffaad5f%3A0x9df66a82a80aeb74!2sRENTAL%20PS5%20%26%20PS4%20GUNUNG%20RINGGIT!5e0!3m2!1sid!2sid!4v1732333051869!5m2!1sid!2sid" width="1900" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <script type="text/javascript" src="js/home/plugin/js/grayscale.js"></script>
         <script type="text/javascript" src="js/home/global_home.js"></script>
 	</div><!-- footer -->
