--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
 
     <link rel="stylesheet" type="text/css" href="js/home/plugin/css/grayscale.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/home.css" />
-
-
-
 	<title>Gunung Ringgit Rental Playstation - Home</title>
 </head>
 
@@ -333,9 +330,15 @@
         <script type="text/javascript" src="js/home/plugin/vendor/popper/popper.min.js"></script>
         <script type="text/javascript" src="js/home/plugin/vendor/bootstrap/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/home/plugin/vendor/jquery-easing/jquery.easing.min.js"></script>
-
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3972.2028380897764!2d105.27276507575564!3d-5.386023653851938!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e40db171ffaad5f%3A0x9df66a82a80aeb74!2sRENTAL%20PS5%20%26%20PS4%20GUNUNG%20RINGGIT!5e0!3m2!1sid!2sid!4v1732333051869!5m2!1sid!2sid" width="1900" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <script type="text/javascript" src="js/home/plugin/js/grayscale.js"></script>
+        <div class="map-container">
+            <iframe 
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3972.2028380897764!2d105.27276507575564!3d-5.386023653851938!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e40db171ffaad5f%3A0x9df66a82a80aeb74!2sRENTAL%20PS5%20%26%20PS4%20GUNUNG%20RINGGIT!5e0!3m2!1sid!2sid!4v1732333051869!5m2!1sid!2sid"
+              allowfullscreen="" 
+              loading="lazy" 
+              referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+          </div>
+          <script type="text/javascript" src="js/home/plugin/js/grayscale.js"></script>
         <script type="text/javascript" src="js/home/global_home.js"></script>
 	</div><!-- footer -->
 </div><!-- container -->
