--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="language" content="en">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     	<!-- blueprint CSS framework -->
-	<link href="images/icon.ico" rel="shortcut icon">
+	<link href="images/home/icon.JPG" rel="shortcut icon">
     <link rel="stylesheet" type="text/css" href="css/fontawesome/css/font-awesome.min.css" />
 	<link rel="stylesheet" type="text/css" href="js/home/plugin/vendor/bootstrap/css/bootstrap.min.css" />
 
