--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" href="#">Games <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a class="nav-link js-scroll-trigger" href="#playstationgames">Gunung Ringgit Playstation</a>
+                            <a class="nav-link js-scroll-trigger" href="#playstationgames">Games Playstation 5</a>
+                        </li>
+                        <li>
+                            <a class="nav-link js-scroll-trigger" href="#playstationgames4">Games Playstation 4</a>
                         </li>
                     </ul>
                 </li>
@@ -231,7 +234,7 @@
 </section>
 
 
-<section id="playstationgames" class="download-section content-section text-center">
+<section id="playstationgames4" class="download-section content-section text-center">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto">
@@ -458,7 +461,7 @@
         <div class="row">
             <div class="col-lg-12 mx-auto">
                 <h2>Kontak Kami</h2>
-                <h4><i>Untuk booking dapat WA ke no. 0878-7720-7665</i></h4>
+                <h4><i>Untuk booking dapat WA ke no. 0896-3101-7966</i></h4>
                 <div class="container text-left">
                     <div class="row">
                         <div class="col-md-8 kritiksaran">
